force-app/main/default/objects/Case/fields/msf_AbandonmentReason__c.field-meta.xml
<CustomField>
    <fullName>msf_AbandonmentReason__c</fullName>
    <label>Motivo abandono</label>
    <length>255</length>
    <type>Text</type>
</CustomField>