force-app/main/default/objects/Case/fields/msf_Address__c.field-meta.xml
<CustomField>
    <fullName>msf_Address__c</fullName>
    <label>Dirección</label>
    <type>TextArea</type>
</CustomField>