force-app/main/default/objects/Case/fields/msf_AssistantType__c.field-meta.xml
<CustomField>
    <fullName>msf_AssistantType__c</fullName>
    <label>Tipo de asistente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>