force-app/main/default/objects/Case/fields/msf_AutoPrint__c.field-meta.xml
<CustomField>
    <fullName>msf_AutoPrint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autoimprime</label>
    <type>Checkbox</type>
</CustomField>