force-app/main/default/objects/Case/fields/msf_Campaign__c.field-meta.xml
<CustomField>
    <fullName>msf_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>