force-app/main/default/objects/Case/fields/msf_CardModel__c.field-meta.xml
<CustomField>
    <fullName>msf_CardModel__c</fullName>
    <label>Modelo de Tarjeta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modelo A</fullName>
            </value>
            <value>
                <fullName>Modelo B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>