force-app/main/default/objects/Case/fields/msf_CelebrationDate__c.field-meta.xml
<CustomField>
    <fullName>msf_CelebrationDate__c</fullName>
    <label>Fecha celebración</label>
    <type>Date</type>
</CustomField>