force-app/main/default/objects/Case/fields/msf_CelebrationProducts__c.field-meta.xml
<CustomField>
    <fullName>msf_CelebrationProducts__c</fullName>
    <label>Productos Celebración</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tarjetas</fullName>
            </value>
            <value>
                <fullName>Cajitas</fullName>
            </value>
            <value>
                <fullName>Invitaciones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>