force-app/main/default/objects/Case/fields/msf_City__c.field-meta.xml
<CustomField>
    <fullName>msf_City__c</fullName>
    <label>Ciudad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>