force-app/main/default/objects/Case/fields/msf_CodeOfEthics__c.field-meta.xml
<CustomField>
    <fullName>msf_CodeOfEthics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Código ético OK</label>
    <type>Checkbox</type>
</CustomField>