force-app/main/default/objects/Case/fields/msf_CollectionObjective__c.field-meta.xml
<CustomField>
    <fullName>msf_CollectionObjective__c</fullName>
    <label>Objetivo de recaudación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>