force-app/main/default/objects/Case/fields/msf_ContactMode__c.field-meta.xml
<CustomField>
    <fullName>msf_ContactMode__c</fullName>
    <label>Modo de contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fijo principal</fullName>
            </value>
            <value>
                <fullName>Móvil principal</fullName>
            </value>
            <value>
                <fullName>Correo postal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>