force-app/main/default/objects/Case/fields/msf_CopySend__c.field-meta.xml
<CustomField>
    <fullName>msf_CopySend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envía copia</label>
    <type>Checkbox</type>
</CustomField>