force-app/main/default/objects/Case/fields/msf_DateDelivery__c.field-meta.xml
<CustomField>
    <fullName>msf_DateDelivery__c</fullName>
    <label>Fecha de envío a domicilio</label>
    <type>Date</type>
</CustomField>