force-app/main/default/objects/Case/fields/msf_DateProposedReception__c.field-meta.xml
<CustomField>
    <fullName>msf_DateProposedReception__c</fullName>
    <label>Fecha recepción propuesta</label>
    <type>Date</type>
</CustomField>