force-app/main/default/objects/Case/fields/msf_DeceaseDate__c.field-meta.xml
<CustomField>
    <fullName>msf_DeceaseDate__c</fullName>
    <label>Fecha fallecimiento</label>
    <type>Date</type>
</CustomField>