force-app/main/default/objects/Case/fields/msf_Decendents__c.field-meta.xml
<CustomField>
    <fullName>msf_Decendents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Descendientes (S/N)</label>
    <type>Checkbox</type>
</CustomField>