force-app/main/default/objects/Case/fields/msf_DelegateOffice__c.field-meta.xml
<CustomField>
    <fullName>msf_DelegateOffice__c</fullName>
    <label>Oficina delegada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>