force-app/main/default/objects/Case/fields/msf_DocumentSendingChannel__c.field-meta.xml
<CustomField>
    <fullName>msf_DocumentSendingChannel__c</fullName>
    <description>Canal de envío del documento</description>
    <label>Canal de envío del documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Correo Postal</fullName>
            </value>
            <value>
                <fullName>Presencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>