force-app/main/default/objects/Case/fields/msf_DonationType__c.field-meta.xml
<CustomField>
    <fullName>msf_DonationType__c</fullName>
    <label>Tipo de donativo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donativo único</fullName>
            </value>
            <value>
                <fullName>Donativo recurrente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>