force-app/main/default/objects/Case/fields/msf_GAU__c.field-meta.xml
<CustomField>
    <fullName>msf_GAU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Afectación</label>
    <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>