force-app/main/default/objects/Case/fields/msf_HeritageLegacy__c.field-meta.xml
<CustomField>
    <fullName>msf_HeritageLegacy__c</fullName>
    <label>Herencia / legado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Herencia</fullName>
            </value>
            <value>
                <fullName>Legado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>