force-app/main/default/objects/Case/fields/msf_HowYouKnownUs__c.field-meta.xml
<CustomField>
    <fullName>msf_HowYouKnownUs__c</fullName>
    <label>Como nos ha conocido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amigo/a</fullName>
            </value>
            <value>
                <fullName>Bodas.net</fullName>
            </value>
            <value>
                <fullName>Web MSF</fullName>
            </value>
            <value>
                <fullName>Email MSF</fullName>
            </value>
            <value>
                <fullName>Zankyou</fullName>
            </value>
            <value>
                <fullName>Revista MSF</fullName>
            </value>
            <value>
                <fullName>Redes Sociales</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>