force-app/main/default/objects/Case/fields/msf_IsAutomatic__c.field-meta.xml
<CustomField>
    <fullName>msf_IsAutomatic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es automático</label>
    <type>Checkbox</type>
</CustomField>