force-app/main/default/objects/Case/fields/msf_LanguageCollaborationCompanies__c.field-meta.xml
<CustomField>
    <fullName>msf_LanguageCollaborationCompanies__c</fullName>
    <label>Idioma Colaboración Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Esp</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Gal</fullName>
            </value>
            <value>
                <fullName>Eus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>