force-app/main/default/objects/Case/fields/msf_LanguagePreferer__c.field-meta.xml
<CustomField>
    <fullName>msf_LanguagePreferer__c</fullName>
    <label>Idioma de preferencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAS</fullName>
            </value>
            <value>
                <fullName>CAT</fullName>
            </value>
            <value>
                <fullName>EUS</fullName>
            </value>
            <value>
                <fullName>GAL</fullName>
            </value>
            <value>
                <fullName>OTRO</fullName>
            </value>
            <value>
                <fullName>VARIOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>