force-app/main/default/objects/Case/fields/msf_LanguagesSolidaryGift__c.field-meta.xml
<CustomField>
    <fullName>msf_LanguagesSolidaryGift__c</fullName>
    <label>Idiomas R.S</label>
    <type>TextArea</type>
</CustomField>