force-app/main/default/objects/Case/fields/msf_Materials__c.field-meta.xml
<CustomField>
    <fullName>msf_Materials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Materiales (S/N)</label>
    <type>Checkbox</type>
</CustomField>