force-app/main/default/objects/Case/fields/msf_MaterialsESF__c.field-meta.xml
<CustomField>
    <fullName>msf_MaterialsESF__c</fullName>
    <label>Materiales ESF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Empresa</fullName>
            </value>
            <value>
                <fullName>Comercio</fullName>
            </value>
            <value>
                <fullName>Entidad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>