force-app/main/default/objects/Case/fields/msf_ModelSlected__c.field-meta.xml
<CustomField>
    <fullName>msf_ModelSlected__c</fullName>
    <label>Modelo elegido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marco blanco foto</fullName>
            </value>
            <value>
                <fullName>Caricatura</fullName>
            </value>
            <value>
                <fullName>Ambulancia</fullName>
            </value>
            <value>
                <fullName>Avión</fullName>
            </value>
            <value>
                <fullName>Letra clásica</fullName>
            </value>
            <value>
                <fullName>Coche</fullName>
            </value>
            <value>
                <fullName>Pareja corazones</fullName>
            </value>
            <value>
                <fullName>Corazones javiroyo</fullName>
            </value>
            <value>
                <fullName>Foto</fullName>
            </value>
            <value>
                <fullName>Cordel corazón blanco</fullName>
            </value>
            <value>
                <fullName>Cordel corazón rojo</fullName>
            </value>
            <value>
                <fullName>Marco foto flores</fullName>
            </value>
            <value>
                <fullName>Media naranja blanco</fullName>
            </value>
            <value>
                <fullName>Media naranja naranja</fullName>
            </value>
            <value>
                <fullName>Mundo</fullName>
            </value>
            <value>
                <fullName>Tandem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>