force-app/main/default/objects/Case/fields/msf_NameForPrinting__c.field-meta.xml
<CustomField>
    <fullName>msf_NameForPrinting__c</fullName>
    <label>Nombre para impresión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>