force-app/main/default/objects/Case/fields/msf_NumberCardsRequested__c.field-meta.xml
<CustomField>
    <fullName>msf_NumberCardsRequested__c</fullName>
    <label>Número de tarjetas solicitado (total)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>