force-app/main/default/objects/Case/fields/msf_Observations__c.field-meta.xml
<CustomField>
    <fullName>msf_Observations__c</fullName>
    <label>Observaciones</label>
    <type>TextArea</type>
</CustomField>