force-app/main/default/objects/Case/fields/msf_Promoter__c.field-meta.xml
<CustomField>
    <fullName>msf_Promoter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>