force-app/main/default/objects/Case/fields/msf_ProposedType__c.field-meta.xml
<CustomField>
    <fullName>msf_ProposedType__c</fullName>
    <label>Tipo de propuesta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donación one off</fullName>
            </value>
            <value>
                <fullName>Matching gift</fullName>
            </value>
            <value>
                <fullName>Marketing con causa</fullName>
            </value>
            <value>
                <fullName>Voluntariado</fullName>
            </value>
            <value>
                <fullName>Donativo en Especies</fullName>
            </value>
            <value>
                <fullName>Tipo 1</fullName>
                <isActive>false</isActive>
                <label>Tipo 1</label>
            </value>
            <value>
                <fullName>Tipo2</fullName>
                <isActive>false</isActive>
                <label>Tipo2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>