force-app/main/default/objects/Case/fields/msf_Ranking__c.field-meta.xml
<CustomField>
    <fullName>msf_Ranking__c</fullName>
    <label>Frío / caliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Frío</fullName>
            </value>
            <value>
                <fullName>Caliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>