force-app/main/default/objects/Case/fields/msf_ReasonNotCooperateCollaborationComp__c.field-meta.xml
<CustomField>
    <fullName>msf_ReasonNotCooperateCollaborationComp__c</fullName>
    <label>Razón no colabora con MSF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing con causa</fullName>
            </value>
            <value>
                <fullName>Código Ético</fullName>
            </value>
            <value>
                <fullName>No encaja Propuesta</fullName>
            </value>
            <value>
                <fullName>No encaja en tiempos</fullName>
            </value>
            <value>
                <fullName>No responde</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>