force-app/main/default/objects/Case/fields/msf_ReasonNotCooperateSolidaryGift__c.field-meta.xml
<CustomField>
    <fullName>msf_ReasonNotCooperateSolidaryGift__c</fullName>
    <label>Razón no colabora Regalo Solidario</label>
    <type>TextArea</type>
</CustomField>