force-app/main/default/objects/Case/fields/msf_RejectionReason__c.field-meta.xml
<CustomField>
    <fullName>msf_RejectionReason__c</fullName>
    <label>Motivo rechazo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>