force-app/main/default/objects/Case/fields/msf_RequestAPresence__c.field-meta.xml
<CustomField>
    <fullName>msf_RequestAPresence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicita presencia</label>
    <type>Checkbox</type>
</CustomField>