force-app/main/default/objects/Case/fields/msf_RequiredAuthorizationDocument__c.field-meta.xml
<CustomField>
    <fullName>msf_RequiredAuthorizationDocument__c</fullName>
    <label>Necesario enviar doc. de autorización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>