force-app/main/default/objects/Case/fields/msf_Segment__c.field-meta.xml
<CustomField>
    <fullName>msf_Segment__c</fullName>
    <label>Segmento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>