force-app/main/default/objects/Case/fields/msf_SendBudget__c.field-meta.xml
<CustomField>
    <fullName>msf_SendBudget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envío presupuesto</label>
    <type>Checkbox</type>
</CustomField>