force-app/main/default/objects/Case/fields/msf_SharedWithOtherNGO__c.field-meta.xml
<CustomField>
    <fullName>msf_SharedWithOtherNGO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Compartido con otras ONG?</label>
    <type>Checkbox</type>
</CustomField>