force-app/main/default/objects/Case/fields/msf_ShippingType__c.field-meta.xml
<CustomField>
    <fullName>msf_ShippingType__c</fullName>
    <label>Tipo de envio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Postal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>