force-app/main/default/objects/Case/fields/msf_Summary__c.field-meta.xml
<CustomField>
    <fullName>msf_Summary__c</fullName>
    <label>Breve resumen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>