force-app/main/default/objects/Case/fields/msf_TeamCE__c.field-meta.xml
<CustomField>
    <fullName>msf_TeamCE__c</fullName>
    <label>Equipo de CE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>