force-app/main/default/objects/Case/fields/msf_Title__c.field-meta.xml
<CustomField>
    <fullName>msf_Title__c</fullName>
    <label>Título</label>
    <length>255</length>
    <type>Text</type>
</CustomField>