force-app/main/default/objects/Case/fields/msf_TypeMaterials__c.field-meta.xml
<CustomField>
    <fullName>msf_TypeMaterials__c</fullName>
    <label>Tipo de materiales</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vídeo</fullName>
            </value>
            <value>
                <fullName>Tarjeta_digital</fullName>
                <label>Tarjeta digital</label>
            </value>
            <value>
                <fullName>Tarjeta_postal</fullName>
                <label>Tarjeta postal</label>
            </value>
            <value>
                <fullName>Vídeo_tarjeta_digital</fullName>
                <label>Vídeo + tarjeta digital</label>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>