force-app/main/default/objects/Case/fields/msf_UseImage__c.field-meta.xml
<CustomField>
    <fullName>msf_UseImage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acepta uso de imagen</label>
    <type>Checkbox</type>
</CustomField>