force-app/main/default/objects/Case/fields/msf_WebSASExternalId__c.field-meta.xml
<CustomField>
    <fullName>msf_WebSASExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Id externo Websas</label>
    <length>40</length>
    <type>Text</type>
</CustomField>