force-app/main/default/objects/Case/fields/msf_WelcomeColdWarm__c.field-meta.xml
<CustomField>
    <fullName>msf_WelcomeColdWarm__c</fullName>
    <label>Welcome bienvenida frio/caliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frío</fullName>
            </value>
            <value>
                <fullName>Caliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>