force-app/main/default/objects/Case/fields/msf_WhoComes__c.field-meta.xml
<CustomField>
    <fullName>msf_WhoComes__c</fullName>
    <label>Persona que acude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>