force-app/main/default/objects/Case/recordTypes/MSF_CE_CompletedTestament.recordType-meta.xml
<RecordType>
    <fullName>MSF_CE_CompletedTestament</fullName>
    <active>true</active>
    <businessProcess>MSF_CompletedTestament</businessProcess>
    <label>HYL - Informar del testamento realizado</label>
</RecordType>