force-app/main/default/objects/Case/recordTypes/MSF_CE_Gratefulness.recordType-meta.xml
<RecordType>
    <fullName>MSF_CE_Gratefulness</fullName>
    <active>false</active>
    <businessProcess>MSF_Gratefulness</businessProcess>
    <label>CE - Agradecimiento donativo</label>
</RecordType>