force-app/main/default/objects/Case/recordTypes/MSF_CE_HereditaryRecords.recordType-meta.xml
<RecordType>
    <fullName>MSF_CE_HereditaryRecords</fullName>
    <active>true</active>
    <businessProcess>MSF_HereditaryRecords</businessProcess>
    <label>HYL - Información sobre expedientes hereditarios (fallecidos)</label>
</RecordType>