force-app/main/default/objects/Case/recordTypes/MSF_CE_Intent_To_Donate.recordType-meta.xml
<RecordType>
    <fullName>MSF_CE_Intent_To_Donate</fullName>
    <active>false</active>
    <businessProcess>MSF_IntentToDonate</businessProcess>
    <label>CE - Intención de donativo</label>
</RecordType>