force-app/main/default/objects/Case/recordTypes/MSF_CE_RequestTestamentaryInfo.recordType-meta.xml
<RecordType>
    <fullName>MSF_CE_RequestTestamentaryInfo</fullName>
    <active>true</active>
    <businessProcess>MSF_HereditaryInfo</businessProcess>
    <label>HYL - Solicitud información para incluir a MSF en el testamento</label>
</RecordType>