force-app/main/default/objects/Case/recordTypes/MSF_CE_Solidary_Gift.recordType-meta.xml
<RecordType>
    <fullName>MSF_CE_Solidary_Gift</fullName>
    <active>true</active>
    <businessProcess>MSF_SolidaryGift</businessProcess>
    <label>CE - Regalo solidario</label>
</RecordType>