force-app/main/default/objects/Case/recordTypes/msf_CollaborationCompanies.recordType-meta.xml
<RecordType>
    <fullName>msf_CollaborationCompanies</fullName>
    <active>true</active>
    <businessProcess>MSF Collaboration Companies</businessProcess>
    <label>CE - Colaboración Empresas</label>
</RecordType>