force-app/main/default/objects/Case/recordTypes/MSF_Complaints.recordType-meta.xml
<RecordType>
    <fullName>MSF_Complaints</fullName>
    <active>true</active>
    <businessProcess>MSF_Complaints</businessProcess>
    <label>Quejas</label>
</RecordType>