force-app/main/default/objects/Case/recordTypes/MSF_DataModificationRequest.recordType-meta.xml
<RecordType>
    <fullName>MSF_DataModificationRequest</fullName>
    <active>true</active>
    <businessProcess>MSF_DataModificationRequest</businessProcess>
    <label>Petición de Modificación de datos</label>
</RecordType>