force-app/main/default/objects/Case/recordTypes/MSF_Doubts.recordType-meta.xml
<RecordType>
    <fullName>MSF_Doubts</fullName>
    <active>true</active>
    <businessProcess>MSF_Doubts</businessProcess>
    <label>Dudas, preguntas, consultas</label>
</RecordType>