force-app/main/default/objects/Case/recordTypes/MSF_F2FCampaigns.recordType-meta.xml
<RecordType>
    <fullName>MSF_F2FCampaigns</fullName>
    <active>true</active>
    <businessProcess>MSF_F2FCampaigns</businessProcess>
    <label>Campañas F2F y TM</label>
</RecordType>