force-app/main/default/objects/Case/recordTypes/MSF_GeneralSpecialCampaigns.recordType-meta.xml
<RecordType>
    <fullName>MSF_GeneralSpecialCampaigns</fullName>
    <active>true</active>
    <businessProcess>MSF_GeneralSpecialCampaigns</businessProcess>
    <label>Campañas especiales General</label>
</RecordType>