force-app/main/default/objects/Case/recordTypes/MSF_IS_Celebrations.recordType-meta.xml
<RecordType>
    <fullName>MSF_IS_Celebrations</fullName>
    <active>true</active>
    <businessProcess>MSF_Celebrations</businessProcess>
    <label>IS - Celebraciones</label>
</RecordType>