force-app/main/default/objects/Case/recordTypes/MSF_IS_Solidarity_Initiative.recordType-meta.xml
<RecordType>
    <fullName>MSF_IS_Solidarity_Initiative</fullName>
    <active>true</active>
    <businessProcess>MSF_SolidarityInitiative</businessProcess>
    <label>IS - Iniciativa Solidaria</label>
</RecordType>