force-app/main/default/objects/Case/recordTypes/MSF_RequestDocuments.recordType-meta.xml
<RecordType>
    <fullName>MSF_RequestDocuments</fullName>
    <active>true</active>
    <businessProcess>MSF_RequestDocuments</businessProcess>
    <label>Petición de Documentos</label>
</RecordType>