force-app/main/default/objects/Case/recordTypes/MSF_RGPD_Management.recordType-meta.xml
<RecordType>
    <fullName>MSF_RGPD_Management</fullName>
    <active>true</active>
    <businessProcess>MSF_RGPD_Management</businessProcess>
    <label>Gestión RGPD y permisos de comunicación</label>
</RecordType>