force-app/main/default/objects/Case/listViews/MSF_BigDonors_Case.listView-meta.xml
<ListView>
    <fullName>MSF_BigDonors_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Big Donors</label>
    <queue>MSF_BigDonors</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>