force-app/main/default/objects/Case/listViews/MSF_Legacy_Case.listView-meta.xml
<ListView>
    <fullName>MSF_Legacy_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Herencias y Legados</label>
    <queue>MSF_Legacy</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>