force-app/main/default/objects/Case/listViews/MSF_MemberAttention_Case.listView-meta.xml
<ListView>
    <fullName>MSF_MemberAttention_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Atención al Socio</label>
    <queue>MSF_MemberAttention</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>