force-app/main/default/objects/Case/listViews/MSF_MidPlus_Case.listView-meta.xml
<ListView>
    <fullName>MSF_MidPlus_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Mid+</label>
    <queue>MSF_MidPlus</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>