force-app/main/default/objects/Case/listViews/MSF_SolidarityGiftAndOrganization_Case.listView-meta.xml
<ListView>
    <fullName>MSF_SolidarityGiftAndOrganization_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Regalo solidario y Empresas</label>
    <queue>MSF_SolidarityGiftAndOrganization</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>