force-app/main/default/objects/Case/listViews/MSF_SolidarityInitiative_Case.listView-meta.xml
<ListView>
    <fullName>MSF_SolidarityInitiative_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Iniciativas Solidarias</label>
    <queue>MSF_SolidarityInitiative</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>