force-app/main/default/objects/Case/listViews/MSF_SolidarityWedding_Case.listView-meta.xml
<ListView>
    <fullName>MSF_SolidarityWedding_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Celebraciones Solidarias</label>
    <queue>MSF_SolidarityWedding</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>