force-app/main/default/objects/Case/listViews/MSF_TelemarketingCampaign_Case.listView-meta.xml
<ListView>
    <fullName>MSF_TelemarketingCampaign_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Telemarketing para Atención al Socio</label>
    <queue>MSF_TelemarketingCampaign</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>